--- a/ssh-config/config
+++ b/ssh-config/config
@@ -2,8 +2,10 @@ Host raspberry1
     HostName 192.168.0.24
     User pi
     IdentityFile ~/.ssh/id_rsa_pi
+    RemoteForward 52698 127.0.0.1:52698
 
 Host raspberry2
     HostName 192.168.0.46
     User pi
     IdentityFile ~/.ssh/id_rsa_pi
+    RemoteForward 52698 127.0.0.1:52698
